# piscinePython

Starting/ex00/: Hello.py
Starting/ex01/: format_ft_time.py
Starting/ex02/: find_ft_type.py  tester.py
Starting/ex03/: NULL_not_found.py  tester.py
Starting/ex04/: whatis.py
Starting/ex05/: building.py  python3
Starting/ex06/: filterstring.py  ft_filter.py
Starting/ex07/: sos.py
Starting/ex08/: Loading.py  tester.py
Starting/ex09/: LICENSE  README.md  setup.cfg  test.py
Starting/ex09/ft_package/: __init__.py  core.py
Starting/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
